--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photosnap - Home</title>
+    <title>Aryan-Photography</title>
     <link rel="stylesheet" href="styles/css/main.css">
 </head>
 
@@ -13,9 +13,7 @@
     <header>
         <div class="container">
             <nav class="navbar">
-                <a href="index.html" class="logo">
-                    <img src="images/logo.svg" alt="logo">
-                </a>
+               <h2 class="aryan">Aryan-Photograpy</h2>
 
                 <ul class="nav_list">
                     <li class="nav_list-item">
