--- a/index.html
+++ b/index.html
@@ -204,9 +204,7 @@
         <div class="container">
             <div class="footer-row">
                 <div class="footer_logo-box">
-                    <a href="index.html" class="logo">
-                        <img src="images/logo-white.svg" alt="logo">
-                    </a>
+                    <h2 class="aryan" style="color: aliceblue;">Aryan-Photograpy</h2>
                     <ul class="social">
                         <li>
                             <a class="facebook" href="index.html"></a>
@@ -214,14 +212,14 @@
                         <li>
                             <a class="youtube" href="index.html"></a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a class="twitter" href="index.html"></a>
-                        </li>
-                        <li>
+                        </li> -->
+                        <!-- <li>
                             <a class="pinterest" href="index.html"></a>
-                        </li>
+                        </li> -->
                         <li>
-                            <a class="instagram" href="index.html"></a>
+                            <a class="instagram" href="https://www.instagram.com/sonu_mahadik_/?igshid=YmMyMTA2M2Y%3D"></a>
                         </li>
                     </ul>
                 </div>
