--- a/features.html
+++ b/features.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Features - Photosnap</title>
+    <title></title>
     <link rel="stylesheet" href="styles/css/main.css">
 </head>
 
@@ -13,9 +13,7 @@
     <header>
         <div class="container">
             <nav class="navbar">
-                <a href="index.html" class="logo">
-                    <img src="images/logo.svg" alt="logo">
-                </a>
+                <h2 class="aryan">Aryan-Photograpy</h2>
 
                 <ul class="nav_list">
                     <li class="nav_list-item">
@@ -132,9 +130,7 @@
         <div class="container">
             <div class="footer-row">
                 <div class="footer_logo-box">
-                    <a href="index.html" class="logo">
-                        <img src="images/logo-white.svg" alt="logo">
-                    </a>
+                    <h2 style="color: aliceblue;" class="aryan">Aryan-Photograpy</h2>
                     <ul class="social">
                         <li>
                             <a class="facebook" href="index.html"></a>
